--- a/src/components/Teams/Teams.css
+++ b/src/components/Teams/Teams.css
@@ -1,6 +1,6 @@
-.leagues-page {
+.teams-page {
     padding-top: 50px;
-    background-color: #777777;
+    background-color: #6c886c;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,6 +10,6 @@
     min-width: 1000px;
 }
 
-.imgLeagueLogo {
-    width: 100px;
+.imgTeamLogo {
+    width: 50px;
 }
