Teams and Leagues cards and search

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App-header {
-  background-color: #c0bcbc;
+  background-color: #cbcbcb;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
