--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,31 @@
   font-size: calc(10px + 2vmin);
   color: #000000;
 }
+
+.h1withSearch {
+  background-color: white;
+  margin-top: 10px;
+  margin-bottom: 25px;
+  padding-inline: 10px;
+  border-radius: 5px;
+}
+
+.h1withLeagueDate {
+  background-color: white;
+  margin-top: 30px;
+  margin-bottom: 25px;
+  padding: 10px 20px 30px 20px;
+  border-radius: 5px;
+}
+
+.h1withTeamDate {
+  background-color: white;
+  margin-top: 75px;
+  margin-bottom: 25px;
+  padding: 10px 20px 30px 20px;
+  border-radius: 5px;
+}
+
+.imgTeamMatchLogo {
+  width: 50px;
+}
