--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,40 @@
 .App-header {
-  background-image: url(./assets/grassBackgroind.jpg);
-  background-attachment: fixed;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #000000;
+    background-image: url(./assets/grassBackgroind.jpg);
+    background-attachment: fixed;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: #000000;
 }
 
 .h1withSearch {
-  background-color: white;
-  margin-top: 10px;
-  margin-bottom: 25px;
-  padding-inline: 10px;
-  border-radius: 5px;
+    background-color: white;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    padding-inline: 10px;
+    border-radius: 5px;
+    width: 100%;
 }
 
 .h1withLeagueDate {
-  background-color: white;
-  margin-top: 30px;
-  margin-bottom: 25px;
-  padding: 10px 20px 30px 20px;
-  border-radius: 5px;
+    background-color: white;
+    margin-top: 30px;
+    margin-bottom: 25px;
+    padding: 10px 20px 30px 20px;
+    border-radius: 5px;
 }
 
 .h1withTeamDate {
-  background-color: white;
-  margin-top: 75px;
-  margin-bottom: 25px;
-  padding: 10px 20px 30px 20px;
-  border-radius: 5px;
+    background-color: white;
+    margin-top: 75px;
+    margin-bottom: 25px;
+    padding: 10px 20px 30px 20px;
+    border-radius: 5px;
 }
 
 .imgTeamMatchLogo {
-  width: 50px;
+    width: 50px;
 }
